--- a/index.html
+++ b/index.html
@@ -90,27 +90,26 @@
 
 
 
-
     <section class="skills" id="skills">
         <h2 class="heading">My <span>Skills</span></h2>
         <div class="container">
             <div class="row" id="skillsContainer">
                 <div class="bar animate__animated animate__zoomIn animate__delay-2s"">
                     <div class="info">
-                        <img src="HTML.png">
-                        <span>HTML</span>
+                        <img src="aws.png">
+                        <span>AWS</span>
                     </div>
                 </div>
                 <div class="bar animate__animated animate__zoomIn animate__delay-2s">
                     <div class="info">
-                        <img src="CSS.png">
-                        <span>CSS</span>
+                        <img src="gcp.png">
+                        <span>GCP</span>
                     </div>
                 </div>
                 <div class="bar animate__animated animate__zoomIn animate__delay-2s">
                     <div class="info">
-                        <img src="JS.png">
-                        <span>JS</span>
+                        <img src="azure.png">
+                        <span>Azure</span>
                     </div>
                 </div>
                 <div class="bar animate__animated animate__zoomIn animate__delay-2s">
@@ -121,8 +120,8 @@
                 </div>
                 <div class="bar animate__animated animate__zoomIn animate__delay-2s">
                     <div class="info">
-                        <img src="powerBI.png">
-                        <span>PowerBi</span>
+                        <img src="java.png">
+                        <span>Java</span>
                     </div>
                 </div>
                 <div class="bar animate__animated animate__zoomIn animate__delay-2s">
@@ -149,19 +148,19 @@
                         <span>VScode</span>
                     </div>
                 </div>
-                <div class="bar animate__animated animate__zoomIn animate__delay-2s">
-                    <div class="info">
-                        <img src="tailwind.png">
-                        <span>tailwind</span>
-                    </div>
-                </div>
-                <div class="bar animate__animated animate__zoomIn animate__delay-2s">
-                    <div class="info">
-                        <img src="react js.png">
-                        <span>Reactjs</span>
-                    </div>
-                </div>
                 
+                <div class="bar animate__animated animate__zoomIn animate__delay-2s">
+                    <div class="info">
+                        <img src="docker.png">
+                        <span>Docker</span>
+                    </div>
+                </div>
+                <div class="bar animate__animated animate__zoomIn animate__delay-2s">
+                    <div class="info">
+                        <img src="kubernetes.png">
+                        <span>Kubernetes</span>
+                    </div>
+                </div>
             </div>
         </div>
      </section>
